force-app/main/default/objects/Contract/fields/Annual_Contract_Amount__c.field-meta.xml
<CustomField>
    <fullName>Annual_Contract_Amount__c</fullName>
    <description>Total Contract Amount divided by 12 to give Annual Contract Amount</description>
    <formula>(Total_Contract_Amount__c /  ContractTerm ) * 12</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Contract Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>