force-app/main/default/objects/Contract/fields/Contract_Account_Manager__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Account Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>