force-app/main/default/objects/Contract/fields/Contract_Account_Vendor__c.field-meta.xml
<CustomField>
    <fullName>Contract_Account_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contract Account Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts1</relationshipName>
    <type>Lookup</type>
</CustomField>