force-app/main/default/objects/Contract/recordTypes/Hospitality.recordType-meta.xml
<RecordType>
    <fullName>Hospitality</fullName>
    <active>true</active>
    <description>For events and activities</description>
    <label>Hospitality</label>
</RecordType>