force-app/main/default/objects/Contract/recordTypes/Logistics.recordType-meta.xml
<RecordType>
    <fullName>Logistics</fullName>
    <active>true</active>
    <label>Logistics</label>
</RecordType>