force-app/main/default/objects/Contract/recordTypes/SaaS.recordType-meta.xml
<RecordType>
    <fullName>SaaS</fullName>
    <active>true</active>
    <description>Software-as-a-Service contract</description>
    <label>SaaS</label>
</RecordType>