force-app/main/default/objects/Contract/recordTypes/Software_License.recordType-meta.xml
<RecordType>
    <fullName>Software_License</fullName>
    <active>true</active>
    <label>Software License</label>
</RecordType>