force-app/main/default/objects/Contract/recordTypes/Subscription.recordType-meta.xml
<RecordType>
    <fullName>Subscription</fullName>
    <active>true</active>
    <label>Subscription</label>
</RecordType>