force-app/main/default/objects/Contract/recordTypes/Warehouse.recordType-meta.xml
<RecordType>
    <fullName>Warehouse</fullName>
    <active>true</active>
    <label>Warehouse</label>
</RecordType>