force-app/main/default/objects/Contract/listViews/AllActivatedContracts.listView-meta.xml
<ListView>
    <fullName>AllActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>Contract_Account_Vendor__c</columns>
    <columns>Contract_Account_Manager__c</columns>
    <columns>Total_Contract_Amount__c</columns>
    <columns>CONTRACT.END_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>All Activated Contracts</label>
</ListView>