force-app/main/default/objects/Contract/listViews/AllContracts.listView-meta.xml
<ListView>
    <fullName>AllContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>Contract_Account_Vendor__c</columns>
    <columns>Contract_Account_Manager__c</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT_TERM</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Total_Contract_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Contracts</label>
</ListView>