force-app/main/default/objects/Contract/listViews/MyActivatedContracts.listView-meta.xml
<ListView>
    <fullName>MyActivatedContracts</fullName>
    <columns>CONTRACT.CONTRACT_NUMBER</columns>
    <columns>CONTRACT.NAME</columns>
    <columns>SALES.ACCOUNT.NAME</columns>
    <columns>CONTRACT.RECORDTYPE</columns>
    <columns>CONTRACT.STATUS</columns>
    <columns>CONTRACT.START_DATE</columns>
    <columns>CONTRACT.END_DATE</columns>
    <columns>Contract_Account_Manager__c</columns>
    <columns>Contract_Account_Vendor__c</columns>
    <columns>Total_Contract_Amount__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTRACT.STATUS_CODE</field>
        <operation>equals</operation>
        <value>A</value>
    </filters>
    <label>My Activated Contracts</label>
</ListView>